--- a/package.json
+++ b/package.json
@@ -7,11 +7,36 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "email": "email dev"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.9.1",
+    "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^6.1.1",
+    "@react-email/components": "0.0.25",
+    "@react-spring/three": "^9.7.4",
+    "@react-three/drei": "^9.112.0",
+    "@react-three/fiber": "^8.17.7",
+    "@syncfusion/ej2-base": "^27.1.48",
+    "@syncfusion/ej2-react-grids": "^27.1.48",
+    "@syncfusion/ej2-react-kanban": "^27.1.48",
+    "@types/three": "^0.168.0",
+    "emailjs": "^4.0.3",
+    "firebase": "^10.13.2",
+    "framer-motion": "^11.5.6",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.2",
+    "react-type-animation": "^3.2.0",
+    "three": "^0.168.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -25,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "react-email": "3.0.1",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.1"
   }
